Fri Jun 29 15:32:00 2007  Koichi Sasada  <ko1@atdot.net>

	* configure.in: add fastcall attribute check.

Fri Jun 29 14:51:24 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (assoc_list): remove expanded hash literal (no splat).

	* lib/webrick/httpstatus.rb (WEBrick::HTTPStatus::EOFError): adapt
	  to new syntax.

Fri Jun 29 14:48:18 2007  Koichi Sasada  <ko1@atdot.net>

	* tool/insns2vm.rb, lib/vm/instruction.rb: move process body
	  to lib/vm/instruction.rb.

	* common.mk: fix aotc rule.
	  experimental. bin/ruby2cext is not added yet.

Fri Jun 29 11:23:09 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (dsym): return non-null NODE even if yyerror().  based on a
	  patch from from Yusuke ENDOH <mame AT tsg.ne.jp>.  [ruby-dev:31085]

Thu Jun 28 23:29:30 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (assoc_list): odd number check only for NODE_ARRAY.
	  [ruby-dev:31082]

Thu Jun 28 22:24:33 2007  Koichi Sasada  <ko1@atdot.net>

	* win32/Makefile.sub: define FUNC_FASTCALL macro.

	* vm.h: fix to use FUNC_FASTCALL macro.
	  TODO: add FUNC_FASTCALL macro by configure.

Thu Jun 28 19:38:53 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: fix to remove -Wall warnings on gcc.

	* compile.c (make_name_with_str): removed. use rb_sprintf() instead.

Thu Jun 28 18:53:01 2007  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_hash): fix hash area.

Thu Jun 28 15:00:06 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): local variable to be
	  initialized.  [ruby-dev:31077]

Thu Jun 28 11:30:39 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* gc.c (rb_obj_id): use SIGNED_VALUE instead of long.

Thu Jun 28 05:01:56 2007  Koichi Sasada  <ko1@atdot.net>

	* common.mk (run.gdb): fix to load $(srcdir)/.gdbinit

	* vm.c (rb_vm_set_finish_env): add a cast.

	* vm.h: support __fastcall for MSVC.

Thu Jun 28 02:12:08 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/runner.rb: fix to untouch $:.
